RESOLVED FIXED274295
TextIndicators shouldn't be black.
https://bugs.webkit.org/show_bug.cgi?id=274295
Summary TextIndicators shouldn't be black.
Megan Gardner
Reported 2024-05-16 20:53:18 PDT
TextIndicators should preserve the original text color.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-16 20:53:34 PDT
Megan Gardner
Comment 2 2024-05-16 20:56:36 PDT
EWS
Comment 3 2024-05-16 23:40:45 PDT
Committed 278906@main (4bae864b0110): <https://commits.webkit.org/278906@main> Reviewed commits have been landed. Closing PR #28694 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.