TextIndicators text shouldn't be black. https://bugs.webkit.org/show_bug.cgi?id=274295 rdar://128247568

Reviewed by Aditya Keerthi.

In order for the textIndicators to look right in all
situations, they need to preserve the original text
color, and not just default to black text.

* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::createTextIndicatorForRange):

Canonical link: https://commits.webkit.org/278906@main